--- a/apps/shared-bom/gradle/libs.versions.toml
+++ b/apps/shared-bom/gradle/libs.versions.toml
@@ -1,12 +1,16 @@
 [versions]
 java = "21"
 kotlin = "1.9.10"
+gradle-gatling = "3.9.5.5"
+gradle-wrapper = "gradle-8.4-rc-1"
 spring-boot = "3.2.0-M3"
 spring-dependency-management = "1.1.3"
 
 [plugins]
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-plugin-allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version.ref = "kotlin" }
 kotlin-plugin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
+gradle-plugin-gatling = { id = "io.gatling.gradle", version.ref = "gradle-gatling" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 spring-deps = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
