corrected gatling simulations;

--- a/apps/.env
+++ b/apps/.env
@@ -6,4 +6,8 @@ JDBC_DATABASE_URL      = jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 JDBC_DATABASE_USERNAME = ${POSTGRES_USER}
 JDBC_DATABASE_PASSWORD = ${POSTGRES_PASSWORD}
 
+R2DBC_DATABASE_URL      = r2dbc:postgresql://localhost:5432/${POSTGRES_DB}
+R2DBC_DATABASE_USERNAME = ${POSTGRES_USER}
+R2DBC_DATABASE_PASSWORD = ${POSTGRES_PASSWORD}
+
 PORT = 5000
